# repokit

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
ghinit/: __init__.py  cli.py  config.py  core.py  templates.py
ghinit/templates/django/: template.toml
ghinit/templates/django/{{repo_name}}/: urls.py  wsgi.py
ghinit/templates/flask/: template.toml
ghinit/templates/ml/: template.toml
ghinit/templates/ml/notebooks/: starter.ipynb
ghinit/templates/ml/src/: train.py
ghinit/templates/react/: index.html  template.toml
repokit/: __init__.py  cli.py  config.py  core.py  detect.py
repokit/templates/cli/: pyproject.toml  template.toml
repokit/templates/cli/{{repo_name}}/: cli.py
repokit/templates/django/: manage.py  requirements.txt
repokit/templates/django/{{repo_name}}/: settings.py
repokit/templates/fastapi/: main.py  template.toml
repokit/templates/flask/: app.py
repokit/templates/ml/: README.md  requirements.txt
repokit/templates/ml/src/: __init__.py
repokit/templates/react/: package.json
repokit/templates/react/src/: main.jsx
repox/: __init__.py
tests/: test_cli.py  test_config.py  test_core.py  test_detect.py  test_templates.py
