[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ghinit"
version = "1.0.1"
description = "CLI tool for creating and initializing GitHub repositories from the terminal."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
  { name = "ghinit contributors" }
]
keywords = ["cli", "github", "git", "developer-tools", "automation"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Version Control :: Git",
  "Topic :: Utilities",
]
dependencies = [
  "click>=8.0",
  "questionary>=2.0",
  "tomli>=2.0; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/xyzprtk/ghinit"
Repository = "https://github.com/xyzprtk/ghinit"
Issues = "https://github.com/xyzprtk/ghinit/issues"

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "build>=1.2.0",
  "twine>=5.0.0",
  "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
repo = "ghinit.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["ghinit*"]

[tool.setuptools.package-data]
ghinit = ["templates/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
