[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "{{repo_name}}"
version = "0.1.0"
description = "CLI app by {{author}}"
requires-python = ">=3.8"
dependencies = ["click>=8.0"]

[project.scripts]
{{repo_name}} = "{{repo_name}}.cli:main"

[tool.setuptools.packages.find]
include = ["{{repo_name}}*"]
